<resources>

    <string name="app_name">Doc Translator</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Doc Translator</string>
    <string name="take_photo">Take a Photo</string>
    <string name="picture_file_hint">Picture file hint</string>
    <string name="image_description">Image description</string>
    <string name="convert_to_text">Convert To Text</string>
    <string name="translate">Translate</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="title_activity_convert_text">ConvertTextActivity</string>
    <string name="title_activity_translate_text">TranslateTextActivity</string>
    <string name="default_text">Converted Text</string>
    <string name="image_desc">Image Desc</string>

</resources>